--- a/body/pom.xml
+++ b/body/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.networknt</groupId>
+        <groupId>com.github.dineshalapati</groupId>
         <artifactId>light-4j</artifactId>
         <version>1.5.0</version>
         <relativePath>..</relativePath>
@@ -31,19 +31,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>config</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>utility</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>status</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>exception</artifactId>
         </dependency>
         <dependency>
@@ -83,7 +83,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>client</artifactId>
             <scope>test</scope>
         </dependency>
