--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.networknt</groupId>
+        <groupId>com.github.dineshalapati</groupId>
         <artifactId>light-4j</artifactId>
         <version>1.5.0</version>
         <relativePath>..</relativePath>
@@ -31,47 +31,47 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>config</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>audit</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>info</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>exception</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>body</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>registry</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>consul</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>zookeeper</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>balance</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>cluster</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>service</artifactId>
         </dependency>
         <dependency>
@@ -87,7 +87,7 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>client</artifactId>
         </dependency>
 
