--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.networknt</groupId>
+        <groupId>com.github.dineshalapati</groupId>
         <artifactId>light-4j</artifactId>
         <version>1.5.0</version>
         <relativePath>..</relativePath>
@@ -31,7 +31,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.networknt</groupId>
+            <groupId>com.github.dineshalapati</groupId>
             <artifactId>config</artifactId>
         </dependency>
         <dependency>
